fixL style for big map nutton to be visible

--- a/online-zoo/pages/index/mapStyle.css
+++ b/online-zoo/pages/index/mapStyle.css
@@ -32,7 +32,7 @@
     background: url(../../assets/images/map/map.svg) center no-repeat no-repeat;
 }
 
-.map-watch-btn {
+.map-watch-btn-big {
     width: 245px;
     height: 55px;
     margin-top: 35px;
